[package]
name = "cat5"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-utils = "3.0.1"
actix-web = "4.3.1"
bit-vec = "0.6.3"
cairo-rs = { version = "0.17.0", features = ["png", "pdf", "svg"] }
chrono = "0.4.26"
clap = { version = "4.3.0", features = ["derive"] }
csv = "1.2.2"
hex = "0.4.3"
regex = "1.8.3"
reqwest = { version = "0.11.18", features = ["blocking"] }
resvg = "0.34.1"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
sha2 = "0.10.6"
tiny-skia = "0.10.0"
usvg = "0.34.1"
