[package]
name = "cat5"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit-vec = "0.6.3"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.4", features = ["derive"] }
csv-async = { version = "1.3.0", features = ["tokio"] }
hex = "0.4.3"
regex = "1.10.4"
reqwest = { version = "0.12.4", features = ["json"] }
resvg = "0.42.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
sha2 = "0.10.8"
tiny-skia = "0.11.4"
tokio = { version = "1.38.0", features = ["full", "fs"] }
tokio-stream = "0.1.15"
usvg = "0.42.0"
